--- a/dashboard.html
+++ b/dashboard.html
@@ -3,134 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPi Sensor Dashboard</title>
+    <title>Dynamic Sensor Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        /* Use Inter font */
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        /* Simple animation for value updates */
-        .value-update-flash {
-            animation: flashBackground 0.4s ease-out;
-        }
+        body { font-family: 'Inter', sans-serif; }
+        .value-update-flash { animation: flashBackground 0.4s ease-out; }
         @keyframes flashBackground {
-            0% { background-color: rgba(250, 204, 21, 0.4); } /* Tailwind yellow-300 with opacity */
+            0% { background-color: rgba(250, 204, 21, 0.4); } /* yellow-300 opacity-40 */
             100% { background-color: transparent; }
         }
-        /* Style for connection status */
-        .status-dot {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            margin-right: 8px;
-            vertical-align: middle;
-        }
+        .status-dot { display: inline-block; width: 10px; height: 10px; border-radius: 50%; margin-right: 8px; vertical-align: middle; }
         .status-disconnected { background-color: #ef4444; } /* red-500 */
         .status-connecting { background-color: #f59e0b; } /* amber-500 */
         .status-connected { background-color: #22c55e; } /* green-500 */
         .status-error { background-color: #ef4444; } /* red-500 */
+        /* Ensure consistent card height if needed */
+        /* .sensor-card { min-height: 150px; } */
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen p-4 sm:p-8">
 
-    <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md p-6">
+    <div class="max-w-5xl mx-auto bg-white rounded-lg shadow-md p-6">
         <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 mb-4 text-center">Sensor Hub Dashboard</h1>
 
         <div class="mb-6 text-center text-sm font-medium text-gray-600">
             <span id="status-dot" class="status-dot status-disconnected"></span>
-            Status: <span id="status-text">Disconnected</span>
+            Status: <span id="status-text">Disconnected</span> | Broker: <span id="broker-address">ws://localhost:9001</span>
         </div>
 
-        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-            <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 text-center shadow hover:shadow-lg transition-shadow duration-200">
-                <h2 class="text-lg font-semibold text-blue-800 mb-2">Temperature</h2>
-                <p class="text-3xl font-bold text-blue-600">
-                    <span id="temperature-value" class="value-display">--</span><span class="text-xl">°C</span>
-                </p>
-            </div>
-
-            <div class="bg-green-50 border border-green-200 rounded-lg p-4 text-center shadow hover:shadow-lg transition-shadow duration-200">
-                <h2 class="text-lg font-semibold text-green-800 mb-2">Humidity</h2>
-                <p class="text-3xl font-bold text-green-600">
-                    <span id="humidity-value" class="value-display">--</span><span class="text-xl">%</span>
-                </p>
-            </div>
-
-            <div class="bg-purple-50 border border-purple-200 rounded-lg p-4 text-center shadow hover:shadow-lg transition-shadow duration-200">
-                <h2 class="text-lg font-semibold text-purple-800 mb-2">Pressure</h2>
-                <p class="text-3xl font-bold text-purple-600">
-                    <span id="pressure-value" class="value-display">--</span><span class="text-xl"> hPa</span>
-                </p>
-            </div>
+        <div id="sensor-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+            <div id="placeholder-card" class="text-center text-gray-500 col-span-full p-10">Waiting for sensor data...</div>
         </div>
 
-         <div class="mt-6 text-center text-xs text-gray-500">
-            Last Update: <span id="last-update">Never</span> |
-            Platform: <span id="platform-info">N/A</span>
-        </div>
     </div>
 
     <script>
         // --- Configuration ---
         const brokerUrl = 'ws://localhost:9001'; // IMPORTANT: Use ws:// and your WebSocket port
-        const topic = 'rpisensor/data/bme280';    // Topic your C++ app publishes to
+        const baseTopic = 'rpisensor/data';      // Base topic from your config
+        const subscribeTopic = baseTopic + '/+'; // Subscribe to one level below base
         const clientId = 'web_dashboard_' + Math.random().toString(16).substring(2, 10);
 
         // --- DOM Elements ---
         const statusDot = document.getElementById('status-dot');
         const statusText = document.getElementById('status-text');
-        const tempValue = document.getElementById('temperature-value');
-        const humidityValue = document.getElementById('humidity-value');
-        const pressureValue = document.getElementById('pressure-value');
-        const lastUpdateSpan = document.getElementById('last-update');
-        const platformInfoSpan = document.getElementById('platform-info');
+        const brokerAddressSpan = document.getElementById('broker-address');
+        const sensorGrid = document.getElementById('sensor-grid');
+        const placeholderCard = document.getElementById('placeholder-card');
+
+        // --- State ---
+        let firstMessageReceived = false; // To remove placeholder
 
         // --- Helper Functions ---
-        function updateStatus(text, cssClass) {
+        function updateStatus(text, cssClass) { /* ... same as before ... */
             console.log("Status:", text);
             statusText.textContent = text;
-            statusDot.className = `status-dot ${cssClass}`; // Replace all classes
+            statusDot.className = `status-dot ${cssClass}`;
         }
 
-        function applyUpdateAnimation(element) {
+        function applyUpdateAnimation(element) { /* ... same as before ... */
             if (!element) return;
             element.classList.add('value-update-flash');
-            // Remove the class after the animation completes
-            setTimeout(() => {
-                element.classList.remove('value-update-flash');
-            }, 400); // Match animation duration
+            setTimeout(() => { element.classList.remove('value-update-flash'); }, 400);
         }
 
-        function updateElement(element, value, precision = 1) {
-             if (element && value !== undefined && value !== null) {
-                try {
-                    element.textContent = parseFloat(value).toFixed(precision);
-                    applyUpdateAnimation(element.parentElement); // Apply flash to parent <p>
-                } catch (e) {
-                    console.error("Error updating element:", e);
-                    element.textContent = 'Err';
+        /**
+         * Creates the HTML structure for a new sensor card.
+         * @param {string} sensorId - Unique ID derived from topic suffix (e.g., 'bme280', 'bme280_v2').
+         * @param {object} data - The parsed JSON data object from the MQTT message.
+         * @returns {string} HTML string for the new card.
+         */
+        function createSensorCardHTML(sensorId, data) {
+            const cardId = `card-${sensorId}`;
+            const sensorType = data.sensor_type || 'Unknown';
+            const topicSuffix = data.topic_suffix || sensorId; // Use suffix from data if available
+
+            let dataHTML = '';
+            // Generate list items for each data point (excluding known metadata)
+            for (const key in data) {
+                if (data.hasOwnProperty(key) && !['timestamp', 'platform', 'sensor_type', 'topic_suffix', 'error'].includes(key)) {
+                    const valueId = `${cardId}-${key.replace(/[^a-zA-Z0-9]/g, '-')}`; // Create valid ID
+                    const value = data[key];
+                    const displayValue = (typeof value === 'number') ? value.toFixed(1) : value; // Format numbers
+                    // Extract unit if present after underscore (e.g., temperature_celsius -> celsius)
+                    const unit = key.includes('_') ? key.substring(key.lastIndexOf('_') + 1) : '';
+                    const label = key.replace(/_/g, ' ').replace(/\b\w/g, l => l.toUpperCase()); // Format key as label
+
+                    dataHTML += `
+                        <div class="mb-1">
+                            <span class="text-sm text-gray-600">${label}:</span>
+                            <span id="${valueId}" class="font-semibold text-gray-800 value-display">${displayValue}</span>
+                            <span class="text-xs text-gray-500">${unit}</span>
+                        </div>
+                    `;
                 }
-            } else if (element) {
-                element.textContent = '--'; // Reset if value is null/undefined
+            }
+
+            return `
+                <div id="${cardId}" class="sensor-card bg-white border border-gray-200 rounded-lg p-4 shadow hover:shadow-lg transition-shadow duration-200 flex flex-col justify-between">
+                    <div>
+                        <h2 class="text-lg font-semibold text-indigo-700 mb-2 text-center">${sensorType} (${topicSuffix})</h2>
+                        <div class="text-left">
+                            ${dataHTML || '<p class="text-sm text-gray-500">No data fields found.</p>'}
+                        </div>
+                    </div>
+                    <div class="mt-3 text-center text-xs text-gray-500 border-t pt-2">
+                        <span id="${cardId}-platform">${data.platform || 'N/A'}</span> @
+                        <span id="${cardId}-timestamp">${data.timestamp ? new Date(data.timestamp).toLocaleTimeString() : 'N/A'}</span>
+                    </div>
+                </div>
+            `;
+        }
+
+        /**
+         * Updates the data fields within an existing sensor card.
+         * @param {string} sensorId - Unique ID derived from topic suffix.
+         * @param {object} data - The parsed JSON data object.
+         */
+        function updateSensorCard(sensorId, data) {
+            const cardId = `card-${sensorId}`;
+            const cardElement = document.getElementById(cardId);
+            if (!cardElement) return; // Should not happen if called correctly
+
+            // Update data fields
+            for (const key in data) {
+                if (data.hasOwnProperty(key) && !['timestamp', 'platform', 'sensor_type', 'topic_suffix', 'error'].includes(key)) {
+                    const valueId = `${cardId}-${key.replace(/[^a-zA-Z0-9]/g, '-')}`;
+                    const valueElement = cardElement.querySelector(`#${valueId}`);
+                    const value = data[key];
+                    const displayValue = (typeof value === 'number') ? value.toFixed(1) : value;
+
+                    if (valueElement) {
+                        if(valueElement.textContent !== displayValue) { // Only update if changed
+                           valueElement.textContent = displayValue;
+                           applyUpdateAnimation(valueElement);
+                        }
+                    } else {
+                        console.warn(`Element with ID ${valueId} not found in card ${cardId}`);
+                    }
+                }
+            }
+
+            // Update timestamp and platform
+            const timestampElement = cardElement.querySelector(`#${cardId}-timestamp`);
+            const platformElement = cardElement.querySelector(`#${cardId}-platform`);
+            if (timestampElement && data.timestamp) {
+                 try {
+                    timestampElement.textContent = new Date(data.timestamp).toLocaleTimeString();
+                 } catch {
+                    timestampElement.textContent = data.timestamp;
+                 }
+            }
+            if (platformElement && data.platform) {
+                platformElement.textContent = data.platform;
             }
         }
 
         // --- MQTT Client Logic ---
-        const options = {
+        const options = { /* ... same options as before ... */
             clientId: clientId,
             clean: true,
-            connectTimeout: 4000, // Milliseconds
-            // Add username/password if your broker requires authentication
-            // username: 'user',
-            // password: 'password',
+            connectTimeout: 4000,
         };
 
+        brokerAddressSpan.textContent = brokerUrl; // Display broker URL
         console.log(`Attempting to connect to MQTT broker at ${brokerUrl}`);
         updateStatus('Connecting...', 'status-connecting');
         const client = mqtt.connect(brokerUrl, options);
@@ -138,66 +178,61 @@
         // --- Event Handlers ---
         client.on('connect', () => {
             updateStatus('Connected', 'status-connected');
-            client.subscribe(topic, (err) => {
+            client.subscribe(subscribeTopic, (err) => {
                 if (!err) {
-                    console.log(`Successfully subscribed to topic: ${topic}`);
+                    console.log(`Successfully subscribed to topic: ${subscribeTopic}`);
                 } else {
-                    console.error(`Failed to subscribe to topic ${topic}:`, err);
+                    console.error(`Failed to subscribe to topic ${subscribeTopic}:`, err);
                     updateStatus('Subscription Error', 'status-error');
                 }
             });
         });
 
-        client.on('reconnect', () => {
-            updateStatus('Reconnecting...', 'status-connecting');
-        });
-
-        client.on('close', () => {
-            updateStatus('Disconnected', 'status-disconnected');
-        });
-
-        client.on('offline', () => {
-            updateStatus('Offline', 'status-disconnected');
-        });
-
-        client.on('error', (err) => {
-            console.error('MQTT Connection Error:', err);
-            updateStatus('Error', 'status-error');
-            // client.end(); // Optionally close connection on error
+        client.on('reconnect', () => { updateStatus('Reconnecting...', 'status-connecting'); });
+        client.on('close', () => { updateStatus('Disconnected', 'status-disconnected'); });
+        client.on('offline', () => { updateStatus('Offline', 'status-disconnected'); });
+        client.on('error', (err) => { /* ... same error handling ... */
+             console.error('MQTT Connection Error:', err);
+             updateStatus('Error', 'status-error');
         });
 
         client.on('message', (receivedTopic, message) => {
-            // message is Buffer, convert to string
             const messageString = message.toString();
             console.log(`Received message on ${receivedTopic}: ${messageString}`);
 
-            if (receivedTopic === topic) {
-                try {
-                    const data = JSON.parse(messageString);
+            // Extract sensor suffix from topic (part after the last '/')
+            const topicParts = receivedTopic.split('/');
+            if (topicParts.length < 3 || topicParts.slice(0, -1).join('/') !== baseTopic) {
+                console.warn(`Received message on unexpected topic structure: ${receivedTopic}`);
+                return; // Ignore messages not matching baseTopic/+
+            }
+            const sensorId = topicParts[topicParts.length - 1]; // e.g., "bme280", "bme280_v2"
+            const cardId = `card-${sensorId}`;
 
-                    // Update DOM elements with received data
-                    updateElement(tempValue, data.temperature_celsius, 1);
-                    updateElement(humidityValue, data.humidity_percent, 1);
-                    updateElement(pressureValue, data.pressure_hpa, 1);
+            try {
+                const data = JSON.parse(messageString);
 
-                    // Update timestamp and platform info
-                    if (lastUpdateSpan && data.timestamp) {
-                        // Format timestamp for display (optional)
-                        try {
-                             const date = new Date(data.timestamp);
-                             lastUpdateSpan.textContent = date.toLocaleString();
-                        } catch {
-                             lastUpdateSpan.textContent = data.timestamp; // Fallback
-                        }
-                    }
-                     if (platformInfoSpan && data.platform) {
-                        platformInfoSpan.textContent = data.platform;
-                    }
-
-                } catch (e) {
-                    console.error('Error parsing received JSON:', e);
-                    console.error('Received message string:', messageString);
+                // Remove placeholder if this is the first message
+                if (!firstMessageReceived && placeholderCard) {
+                    placeholderCard.remove();
+                    firstMessageReceived = true;
                 }
+
+                // Check if card exists, create if not
+                let cardElement = document.getElementById(cardId);
+                if (!cardElement) {
+                    console.log(`Creating new card for sensor ID: ${sensorId}`);
+                    const cardHTML = createSensorCardHTML(sensorId, data);
+                    sensorGrid.insertAdjacentHTML('beforeend', cardHTML);
+                } else {
+                    // Card exists, update its content
+                    // console.log(`Updating existing card for sensor ID: ${sensorId}`);
+                    updateSensorCard(sensorId, data);
+                }
+
+            } catch (e) {
+                console.error('Error parsing received JSON:', e);
+                console.error('Received message string:', messageString);
             }
         });
 
